stream-meshed/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hw-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  tls:
  - hosts:
    - ingress.local
    secretName: ingress.local
  rules:
  - host: ingress.local
    http:
      paths:
      - backend:
          serviceName: server-svc
          servicePort: grpc

  tls:
  # This secret must exist beforehand
  # The cert must also contain the subj-name fortune-teller.stack.build
  # https://github.com/kubernetes/ingress-nginx/blob/master/docs/examples/PREREQUISITES.md#tls-certificates
  - secretName: ingress.local
    hosts:
      - ingress.local
